@@ -1,6 +1,7 @@
 28 Oct, 2018
+update: get poster from images table when torrents.poster is empty catalog.php, browse.php 
 fix: missing requires
-update: get poster form images table when torrents.poster is empty
+update: get poster from images table when torrents.poster is empty index blocks
 add: .well-known dir
 update: breadcrumbs
 update: resize signature and avatar in forums
